// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pipe() should return the first met error in pipe chain of validators 1`] = `
Object {
  "errors": Array [],
  "message": "Test",
  "path": Array [],
  "value": 1,
}
`;

exports[`pipe() should support custom message 1`] = `
Object {
  "errors": Array [],
  "message": "Custom message",
  "path": Array [],
  "value": 1,
}
`;
